--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-js-hw-10",
+  "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://makarovyarind/goit-js-hw-11",
@@ -18,12 +18,14 @@
     "url": "https://github.com/makarovyarind/goit-js-hw-11/issues"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8",
+    "axios": "^1.3.4",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6"
+    "notiflix": "^3.2.6",
+    "simplelightbox": "^2.12.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
